Change students to applicants

--- a/src/translation/translation.json
+++ b/src/translation/translation.json
@@ -3,7 +3,7 @@
     "name": "name",
     "status": "status",
     "major": "major",
-    "students": "students",
+    "applicants": "applicants",
     "dates": "dates",
     "sign out": "sign out",
     "all": "all",
@@ -16,7 +16,7 @@
     "name": "الإسم",
     "status": "الحالة",
     "major": "التخصص",
-    "students": "الطلاب",
+    "applicants": "المتقدمون",
     "dates": "التواريخ",
     "sign out": "تسجيل الخروج",
     "all": "all",
