Finish applicants component

--- a/src/translation/translation.json
+++ b/src/translation/translation.json
@@ -19,7 +19,7 @@
     "applicants": "المتقدمون",
     "dates": "التواريخ",
     "sign out": "تسجيل الخروج",
-    "all": "all",
+    "all": "الكل",
     "under review": "قيد المراجعة",
     "initial acceptance": "مقبول بشكل مبدأى",
     "conditional acceptance": "مقبول بشروط",
